[gd_scene load_steps=13 format=3 uid="uid://bnefrw4aj6lje"]

[ext_resource type="Script" path="res://sound_manager/sound_manager.gd" id="1_8r3kk"]
[ext_resource type="AudioStream" uid="uid://c16hbx877jwpy" path="res://assets/Music/TitleScreenMusic.wav" id="2_xbrtt"]
[ext_resource type="AudioStream" uid="uid://dbkjo73o53nh8" path="res://assets/Music/GamePlayMusic.wav" id="3_b512l"]
[ext_resource type="AudioStream" uid="uid://bfu7ivynyi78" path="res://assets/Music/EndingMusic.wav" id="4_alunv"]
[ext_resource type="AudioStream" uid="uid://dt5ncgr0oysid" path="res://assets/SoundEffects/Attack.wav" id="5_j6tk0"]
[ext_resource type="AudioStream" uid="uid://d38f1j5oax4jv" path="res://assets/SoundEffects/ButtonSounds.wav" id="6_uh8dt"]
[ext_resource type="AudioStream" uid="uid://nnb0tgo3i734" path="res://assets/SoundEffects/Dash.wav" id="7_nm5ha"]
[ext_resource type="AudioStream" uid="uid://v0atl3lb2htk" path="res://assets/SoundEffects/Death.wav" id="8_by7kp"]
[ext_resource type="AudioStream" uid="uid://dhw4lmsvtha43" path="res://assets/SoundEffects/Jump.wav" id="9_gp5ok"]
[ext_resource type="AudioStream" uid="uid://cost0b5v540g6" path="res://assets/SoundEffects/Land.wav" id="10_t8tcg"]
[ext_resource type="AudioStream" uid="uid://cxgtvq1wp4rbe" path="res://assets/SoundEffects/LevelComplete.wav" id="11_ssr16"]
[ext_resource type="AudioStream" uid="uid://by6qc0ssanh50" path="res://assets/SoundEffects/Logo.wav" id="12_xh4j5"]

[node name="SoundManager" type="Node"]
script = ExtResource("1_8r3kk")

[node name="Music" type="Node" parent="."]

[node name="TitleScreenMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("2_xbrtt")
volume_db = -10.0
bus = &"Music"

[node name="GamePlayMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("3_b512l")
volume_db = -10.0
bus = &"Music"

[node name="EndingMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("4_alunv")
volume_db = -10.0
bus = &"Music"

[node name="Sounds" type="Node" parent="."]

[node name="AttackSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_j6tk0")
volume_db = -10.0
bus = &"Sounds"

[node name="ButtonSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_uh8dt")
bus = &"Sounds"

[node name="DashSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_nm5ha")
bus = &"Sounds"

[node name="DeathSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_by7kp")
volume_db = -10.0
bus = &"Sounds"

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_gp5ok")
volume_db = -10.0
bus = &"Sounds"

[node name="LandSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("10_t8tcg")
volume_db = -10.0
bus = &"Sounds"

[node name="LevelCompleteSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("11_ssr16")
bus = &"Sounds"

[node name="LogoSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12_xh4j5")
bus = &"Sounds"
